hanu-deploy-apps/openstack/neutron/Deployment_neutron-server.yaml

# Source: neutron/templates/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neutron-server
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: neutron
    application: neutron
    component: server
spec:
  replicas: 3
  selector:
    matchLabels:
      release_group: neutron
      application: neutron
      component: server
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: neutron
        application: neutron
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "5c7b05eb47e1f5bad4324b03a4e7646e24311e8c8f9be5116c41b3dbf18d8f3c"
        configmap-etc-hash: "055e2806854cfb04a58ee07460302e8f4833d302c6fa4d6643e69090a1a122c7"
    spec:
      securityContext:
        runAsUser: 42435
      serviceAccountName: neutron-server
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - neutron
                  - key: application
                    operator: In
                    values:
                    - neutron
                  - key: component
                    operator: In
                    values:
                    - server
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: neutron-server
          image: "deploy001:5000/stein/ubuntu-source-neutron-server:taco-0.1.0.onos"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          readinessProbe:
            tcpSocket:
              port: 9696
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: 9696
          command:
            - /tmp/neutron-server.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/neutron-server.sh
                  - stop
          ports:
            - name: q-api
              containerPort: 9696
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: pod-var-neutron
              mountPath: /var/lib/neutron
            - name: neutron-bin
              mountPath: /tmp/neutron-server.sh
              subPath: neutron-server.sh
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/neutron.conf
              subPath: neutron.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/logging.conf
              subPath: logging.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/api_audit_map.conf
              subPath: api_audit_map.conf
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/plugins/ml2/ml2_conf.ini
              subPath: ml2_conf.ini
              readOnly: true
            
            - name: neutron-etc
              mountPath: /etc/neutron/api-paste.ini
              subPath: api-paste.ini
              readOnly: true
            - name: neutron-etc
              mountPath: /etc/neutron/policy.json
              subPath: policy.json
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: pod-var-neutron
          emptyDir: {}
        - name: neutron-bin
          configMap:
            name: neutron-bin
            defaultMode: 0555
        - name: neutron-etc
          secret:
            secretName: neutron-etc
            defaultMode: 0444
