hanu-deploy-apps/openstack/neutron/Service_neutron.yaml

# Source: neutron/templates/service-ingress-neutron.yaml
apiVersion: v1
kind: Service
metadata:
  name: neutron
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
